--- a/css/style.css
+++ b/css/style.css
@@ -87,10 +87,10 @@ p {
 /* スマホ表示 -------------------------------------*/
 @media screen and (max-width: 768px) {
   .common-inner p {
-    width: 70%;
+    width: 100%;
     font-size: .6rem;
     letter-spacing: 0.2rem;
-    text-align: left;
+    text-align: center;
   }
 }
 
